# MyXZ

./: .gitignore  CMakeLists.txt  Readme
main/: CMakeLists.txt  main.cc
main/audio/: audio_codec.cc  audio_codec.h  esp32s3_audio_codec.cc  esp32s3_audio_codec.h
xiaozhi-esp32-1.4.6/main/: Kconfig.projbuild  ota.cc
xiaozhi-esp32-1.4.6/main/audio_codecs/: no_audio_codec.cc
xiaozhi-esp32-1.4.6/main/boards/common/: board.h
z_xiaozhi-esp32-1.4.6/main/: CMakeLists.txt  application.cc  test.c
z_xiaozhi-esp32-1.4.6/main/audio_codecs/: audio_codec.cc
